2004-01-17  Steffen Pingel  <squig@users.sourceforge.net>

	* blockview.h (class BlockView): Keeps PinView objects sorted by
	pin position.

	* blockconfdialog.cpp: Start positions at index 1. Toggled order
	of address and bits items.

2004-01-12  Steffen Pingel  <squig@users.sourceforge.net>

	* muxmodel.cpp (MuxModel): Removed emit deleted(), the signal is
	emitted by ~BlockModel().

2004-01-09  Steffen Pingel  <squig@users.sourceforge.net>

	* mainwindow.cpp (windowActivated): Disable actions when no
	project is loaded.

	* blockmodel.cpp (BlockModel): Moved offset property from cpu
	model to this class.

	* canvasview.cpp (dropEvent): Snap dropped items to grid.

	* settings.cpp: Added serial port setting.

	* settingsdialog.cpp (SettingsDialog): Replaced radio buttons by
	combo box.

2003-12-17  Steffen Pingel  <squig@users.sourceforge.net>

	* librarywindow.cpp (LibraryWindow): Tweaked colors.

	* pinmodel.cpp (setType): Do not highlight already connected pins.

2003-09-30  Tammo van Lessen  <vanto@users.sourceforge.net>

	* project.cpp: connector (de)serialization changed, id bug fixed

2003-09-28  Steffen Pingel  <squig@users.sourceforge.net>

	* modelfactory.cpp (generate): Added input and output blocks.

2003-09-23  Steffen Pingel  <squig@users.sourceforge.net>

	* canvasview.cpp (contentsMousePressEvent): Disabled PinView
	popup. 

	* blockview.cpp: Raise block on select.

2003-09-21  Tammo van Lessen  <vanto@users.sourceforge.net>

	* connectorviewsegment.cpp (setSelected): Make connectors 
	selectable and removable.

	* mainwindow.cpp: Playing Haldenspezialist
	(fileNew): file new fixed.

	* aboutdialog.cpp (addFileTab): Playing Haldenspezialist.

	* connectorviewlist.cpp (ConnectorViewList): Connect to the
	PinModel's delete signal.

	* canvasview.cpp (CanvasView): Add connector popup, 
	assure that qt deletes the popupmenus automaticaly.

2003-09-19  Tammo van Lessen  <vanto@users.sourceforge.net>
