@@ -18,7 +18,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
  *
- * $Id: blockconfdialog.cpp,v 1.48 2004/01/17 17:35:39 squig Exp $
+ * $Id: blockconfdialog.cpp,v 1.49 2004/01/17 17:59:40 squig Exp $
  *
  *****************************************************************************/
 
@@ -134,9 +134,9 @@ void BlockConfDialog::initBlockWidget()
     clockSpinBox->setSuffix(tr(" ns"));
 
     blockLayout->addWidget(new QLabel(tr("Name"), blockGroupBox), 1, 0);
-    blockLayout->addWidget(blockNameLineEdit, 1, 1);
+    blockLayout->addMultiCellWidget(blockNameLineEdit, 1, 1, 1, 2);
     blockLayout->addWidget(new QLabel(tr("Description"), blockGroupBox), 2, 0);
-    blockLayout->addWidget(blockDescrLineEdit, 2, 1);
+    blockLayout->addMultiCellWidget(blockDescrLineEdit, 2, 1, 2, 2);
     blockLayout->addWidget(new QLabel(tr("Offset"), blockGroupBox), 3, 0);
     blockLayout->addWidget(offsetSpinBox, 3, 1);
     blockLayout->addWidget(new QLabel(tr("Clock"), blockGroupBox), 4, 0);
@@ -316,7 +316,6 @@ void BlockConfDialog::syncModel() {
         runtimeSpinBox->setRange(-1, INT_MAX);
         runtimeSpinBox->setSpecialValueText
             (QString("Auto (%1 ns)").arg(cpuModel->runtime()));
-        qDebug(QString("bool: %1").arg(cpuModel->autoRuntime()));
         runtimeSpinBox->setValue
             (cpuModel->autoRuntime() ? -1 : (int)cpuModel->runtime());
     }
